--- a/dev/eks-deploy-k8s.yaml
+++ b/dev/eks-deploy-k8s.yaml
@@ -2,20 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: springboot-app-rama
-  name: springboot-app-rama
+    app: springboot-app-krishna
+  name: springboot-app-krishna
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: springboot-app-rama
+      app: springboot-app-krishna
   template:
     metadata:
       labels:
-        app: springboot-app-rama
+        app: springboot-app-krishna
     spec:
       containers:
-      - name: my-springboot-app-rama
+      - name: my-springboot-app-krishna
         image: 490167669940.dkr.ecr.ap-southeast-1.amazonaws.com/eks-frontend-app-deployment:frontend-34
         imagePullPolicy: Always
         ports:
@@ -28,9 +28,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: springboot-app-rama
-    k8s-app: springboot-app-rama
-  name: springboot-app-rama
+    app: springboot-app-krishna
+    k8s-app: springboot-app-krishna
+  name: springboot-app-krishna
 spec:
   ports:
   - name: http
@@ -39,4 +39,4 @@ spec:
     targetPort: 8085
   type: LoadBalancer
   selector:
-    app: springboot-app-rama
+    app: springboot-app-krishna
