--- a/dev/eks-deploy-k8s.yaml
+++ b/dev/eks-deploy-k8s.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: springboot-app-krishna
+    app: springboot-app
   name: springboot-app-krishna
 spec:
   replicas: 1
