--- a/dev/eks-deploy-k8s.yaml
+++ b/dev/eks-deploy-k8s.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: springboot-app
-  name: springboot-app-krishna
+  name: springboot-app
 spec:
   replicas: 1
   selector:
