--- a/dev/eks-bkd-deploy.yml
+++ b/dev/eks-bkd-deploy.yml
@@ -1,23 +1,26 @@
-apiVersion: apps/v1
-kind: Deployment
+---
+apiVersion: v1
+kind: pods
+namespace: default
 metadata:
   labels:
-    app: bkd-app
-  name: bkd-app
+    app: springboot-app-1
+  name: springboot-app-1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: bkd-app-krishna
+      app: springboot-app-1
   template:
     metadata:
       labels:
-        app: bkd-app-krishna
+        app: springboot-app-1
     spec:
       containers:
-      - name: my-bkd-app-krishna
-        image: 490167669940.dkr.ecr.ap-southeast-1.amazonaws.com/eks-frontend-app-deployment:frontend-34
-        imagePullPolicy: Always
+      - name: private-reg-container
+        image: ramakrishna8253/week:v5
+      imagePullSecrets:
+      - name: registry-credential-rama
         ports:
         - containerPort: 8085
           name: http
@@ -28,9 +31,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: bkd-app-krishna
-    k8s-app: bkd-app-krishna
-  name: bkd-app-krishna
+    app: springboot-app-1
+    k8s-app: springboot-app-1
+  name: springboot-app-1
 spec:
   ports:
   - name: http
@@ -39,4 +42,4 @@ spec:
     targetPort: 8085
   type: LoadBalancer
   selector:
-    app: bkd-app-krishna
+    app: springboot-app-1
