--- a/dev/testdocker.yml
+++ b/dev/testdocker.yml
@@ -1,45 +1,35 @@
----
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
-namespace: springboot-app-krishna
 metadata:
-  labels:
-    app: springboot-app-1
-  name: springboot-app-1
+  name: busybox
 spec:
-  replicas: 1
+  replicas: 1  
   selector:
     matchLabels:
-      app: springboot-app-1
+      app: busybox-test
   template:
     metadata:
       labels:
-        app: springboot-app-1
+        app: busybox-test
     spec:
-      containers:
-      - name: private-reg-container
-        image: ramakrishna8253/week:v5
       imagePullSecrets:
-      - name: registry-credential-rama
+      - name: imagepull-docker
+      containers:
+      - name: busybox
+        image: ramakrishna8254/week:v3
+        imagePullPolicy: Always
         ports:
-        - containerPort: 8085
-          name: http
-          protocol: TCP
-# service type loadbalancer       
+          - containerPort: 8080
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: springboot-app-1
-    k8s-app: springboot-app-1
-  name: springboot-app-1
+  name: busybox-test
 spec:
   ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 8085
-  type: LoadBalancer
+  - port: 8080
+    targetPort: 8080
   selector:
-    app: springboot-app-1
+    app: busybox-test
+  type: LoadBalancer
