--- a/dev/eks-deploy-k8s.yaml
+++ b/dev/eks-deploy-k8s.yaml
@@ -2,21 +2,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: springboot-app
-  name: springboot-app
+    app: springboot-app-1
+  name: springboot-app-1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: springboot-app-krishna
+      app: springboot-app-vijay
   template:
     metadata:
       labels:
-        app: springboot-app-krishna
+        app: springboot-app-vijay
     spec:
       containers:
-      - name: my-springboot-app-krishna
-        image: 490167669940.dkr.ecr.ap-southeast-1.amazonaws.com/eks-frontend-app-deployment:frontend-34
+      - name: my-springboot-app-vijay
+        image: 490167669940.dkr.ecr.ap-southeast-1.amazonaws.com/eks-frontend-app-deployment:frontend-341
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
@@ -28,9 +28,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: springboot-app-krishna
-    k8s-app: springboot-app-krishna
-  name: springboot-app-krishna
+    app: springboot-app-vijay
+    k8s-app: springboot-app-vijay
+  name: springboot-app-vijay
 spec:
   ports:
   - name: http
@@ -39,4 +39,4 @@ spec:
     targetPort: 8085
   type: LoadBalancer
   selector:
-    app: springboot-app-krishna
+    app: springboot-app-vijay
