--- a/uat/eks-deploy-k8s.yaml
+++ b/uat/eks-deploy-k8s.yaml
@@ -2,20 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: springboot-app
-  name: springboot-app
+    app: springbootapp
+  name: springbootapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: springboot-app-krishna
+      app: springbootapp-vj
   template:
     metadata:
       labels:
-        app: springboot-app-krishna
+        app: springbootapp-vj
     spec:
       containers:
-      - name: my-springboot-app-krishna
+      - name: my-springbootapp-vj
         image: 490167669940.dkr.ecr.ap-southeast-1.amazonaws.com/eks-frontend-app-deployment:frontend-34
         imagePullPolicy: Always
         ports:
@@ -28,9 +28,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: springboot-app-krishna
-    k8s-app: springboot-app-krishna
-  name: springboot-app-krishna
+    app: springbootapp-vj
+    k8s-app: springbootapp-vj
+  name: springbootapp-vj
 spec:
   ports:
   - name: http
@@ -39,4 +39,4 @@ spec:
     targetPort: 8085
   type: LoadBalancer
   selector:
-    app: springboot-app-krishna
+    app: springbootapp-vj
