--- a/dev1/newdeployment.yml
+++ b/dev1/newdeployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: testapp
+  namespace: testapp
 spec:
   replicas: 1
   selector:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: testapp 
+  namespace: testapp
 spec:
   ports:
   - port: 80
