--- a/dev1/virtualservice.yml
+++ b/dev1/virtualservice.yml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: testapp-vs
+  namespace: testapp
 spec:
   hosts:
   - "*"
