--- a/dev1/virtualservice.yml
+++ b/dev1/virtualservice.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: testapp
+  name: testapp-vs
   namespace: testapp
 spec:
   hosts:
