--- a/dev1/virtualservice.yml
+++ b/dev1/virtualservice.yml
@@ -15,6 +15,8 @@ spec:
     route:
     - destination:
         host: testapp.testapp.svc.cluster.local
+         port:
+          number: 8080
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
