--- a/dev1/virtualservice.yml
+++ b/dev1/virtualservice.yml
@@ -21,8 +21,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: testapp-internal
-  namespace: testapp
+  name: cloud-gateway
 spec:
   # The selector matches the ingress gateway pod labels.
   # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
@@ -35,3 +34,4 @@ spec:
       protocol: HTTP
     hosts:
     - "*"
+
