--- a/dev1/virtualservice.yml
+++ b/dev1/virtualservice.yml
@@ -1,13 +1,12 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: testapp-vs
-  namespace: testapp
+  name: testapp-vs  
 spec:
   hosts:
   - testapp.cloudautomate.in
   gateways:
-  - testapp-internal
+  - cloud-gateway
   http:
   - match:    
     - uri:
