--- a/dev1/virtualservice.yml
+++ b/dev1/virtualservice.yml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: testapp-vs  
+  namespace: testapp
 spec:
   hosts:
   - testapp.cloudautomate.in
@@ -21,6 +22,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: cloud-gateway
+  namespace: testapp
 spec:
   # The selector matches the ingress gateway pod labels.
   # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
