--- a/dev1/virtualservice.yml
+++ b/dev1/virtualservice.yml
@@ -35,4 +35,26 @@ spec:
       protocol: HTTP
     hosts:
     - "*"
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  annotations:
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/scheme: internet-facing
+  name: istio-hellow-alb
+  namespace: istio-system
+spec:
+  ingressClassName: alb  
+  rules:
+  
+  - http:
+      paths:
+      - backend:
+          service:
+            name: istio-ingressgateway
+            port:
+              number: 80
+        path: /*
+        pathType: ImplementationSpecific
 
