--- a/dev1/newdeployment.yml
+++ b/dev1/newdeployment.yml
@@ -30,6 +30,8 @@ spec:
   ports:
   - port: 80
     targetPort: 8080
+    name: http-port  # Follows the naming convention
+    protocol: TCP
   selector:
     app: testapp
   type: ClusterIP
