--- a/dev2/virtualservice.yml
+++ b/dev2/virtualservice.yml
@@ -54,4 +54,41 @@ spec:
         path: /*
         pathType: ImplementationSpecific
 ---
-
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: prometehus-vs
+  name: istio-system
+spec:
+  hosts:
+  - prometheus.cloudautomate.in
+  gateways:
+  - cloud-gateway-new
+  http:
+  - match:    
+    - uri:
+        prefix: /
+    route:
+    - destination:
+        host: prometheus.istio-system.svc.cluster.local
+        port:
+          number: 9090
+  ---
+  apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: grafana-vs  
+spec:
+  hosts:
+  - grafana.cloudautomate.in
+  gateways:
+  - cloud-gateway
+  http:
+  - match:    
+    - uri:
+        prefix: /
+    route:
+    - destination:
+        host: grafana.istio-system.svc.cluster.local
+        port:
+          number: 3000
