--- a/dev2/virtualservice.yml
+++ b/dev2/virtualservice.yml
@@ -57,6 +57,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: prometehus-vs
+  namespace: istio-system
 spec:
   hosts:
   - prometheus.cloudautomate.in
@@ -73,7 +74,8 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: grafana-vs  
+  name: grafana-vs 
+  namespace: istio-system
 spec:
   hosts:
   - grafana.cloudautomate.in
