--- a/dev2/virtualservice.yml
+++ b/dev2/virtualservice.yml
@@ -70,6 +70,8 @@ spec:
     route:
     - destination:
         host: prometheus.istio-system.svc.cluster.local
+        port:
+          number: 9090
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -88,4 +90,8 @@ spec:
     route:
     - destination:
         host: grafana.istio-system.svc.cluster.local
+        port:
+          number: 3000
+     
+        
         
